cmake_minimum_required(VERSION 3.26)
project(Problem_Solving)

set(CMAKE_CXX_STANDARD 20)

add_executable(hello_cpp "sheet_1_(dtypes_conditions)/hello_cpp.cpp")
add_executable(data_types "sheet_1_(dtypes_conditions)/data_types.cpp")
add_executable(simple_calculator "sheet_1_(dtypes_conditions)/simple_calculator.cpp")
add_executable(difference "sheet_1_(dtypes_conditions)/difference.cpp")
add_executable(circle_area "sheet_1_(dtypes_conditions)/circle_area.cpp")

